SERVER-103963 checkMetadataConsistency reports false positives when downgrading from database authoritative shards (#35147)

GitOrigin-RevId: 0617cee7c7e46323ef357c6af47077b8a2dbb8a5